<resources>

    <string name="app_name">Kahawa Information System</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--string for settings-->
    <string name="action_settings">Settings</string>

    <string name="cuisines_available">Cuisines Available</string>
    <string name="your_location">Your location</string>
    <string name="your_details">Your details</string>


    <string name="item_title">Chicken Noodle</string>
    <string name="item_type">Polish</string>
    <string name="title_activity_my_order">MyOrderActivity</string>
    <string name="timer_counter">00:00:00</string>

    <string name="no_food_item_selected">No Food Item Selected</string>
    <string name="no_food_msg">No Food</string>
    <string name="restaurant">Restaurants</string>

    <!--here we declare strings to hold variables for the order-->
    <string name="trackres">Restaurant name:</string>
    <string name="nameof_res">The name of the restaurant</string>
    <string name="deliverytime">Delivery time</string>
    <string name="resdeliverytime">Hours or mins</string>
    <string name="foodordered">Food ordered:</string>
    <string name="foodcost">Cost:</string>
    <string name="itemordered">Number of Orders</string>
    <string name="ordertotal">Total of this order</string>
    <string name="totalcost">Grand total</string>
    <string name="deliveryamount">Cost of Delivery</string>
    <string name="ordereddate">Date ordered</string>


    <string name="track_order">Track my Orders</string>
    <string name="my_order">My orders</string>


    <string name="regional_cuisines">Regional Cuisines</string>
    <!--Regional cuisines types-->
    <string name="chinese">Chinese Dishes</string>
    <string name="american">American Dishes</string>
    <string name="asian">Asian Dishes</string>
    <string name="ethiopian">Ethiopian Dishes</string>
    <string name="italian">Italian Dishes</string>

    <string name="Other_types">Other Cuisines</string>
    <string name="salads">Salads</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="burger">Burger</string>
    <string name="bakery">Bakery and cakes</string>
    <string name="breakfast">Breakfast</string>
    <string name="sea_foods">Sea foods</string>

    <string name="title_activity_other_services">Other Services</string>
    <string name="title_activity_detailed_food">Detailed Food</string>
    <string name="title_activity_hotel_description">Hotel Description</string>
    <string name="hotel_name">Name of hotel</string>
    <string name="title_activity_list_hotels">Foodie</string>
    <string name="making_your_meals_memorable">Making your meals memorable</string>
    <string name="powered_by_syncsoft_limited">Powered by Syncsoft Limited</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="add_order">add order</string>


    <!-- sharing text to other apps-->
    <string name="send_to">Share via</string>
    <string name="title_activity_fav">FavActivity</string>
    <string name="my_favorite_meals">My favorite meals</string>
    <string name="delete_your_favorites">Delete your favorites</string>
    <string name="clear_favorites">Clear favorites</string>
    <string name="meal_name">Meal name</string>
    <string name="cost">Cost</string>
    <string name="home">Home</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="chat">Chat</string>
    <string name="user_account">User Account</string>
    <string name="name">Name:</string>
    <string name="buy_sell">Buy</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_page">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_here">Log in here</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign in</string>
    <string name="add_topic">Add Topic</string>
    <string name="enter_new_topic">Enter new Topic</string>
    <string name="username">username</string>
    <string name="password_user">password</string>
    <string name="name_of_product">Name of Product</string>
    <string name="product_cost">Product cost</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_good">Upload good</string>
    <string name="for_your_coffee_needs">For your coffee needs</string>
    <string name="sender">Sender</string>
    <string name="date">date</string>
    <string name="hello_welcome_to_kahawa_information_system_chat_app">Hello welcome to Kahawa Information System chat app</string>
    <string name="your_name_here">Your name here</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="buy_buy">Buy</string>
    <string name="my_favorites">My Favorites</string>
    <string name="ksh">Ksh.</string>
    <string name="log_out">Log out</string>

</resources>
