<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bubble_layout_parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/bubble_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@drawable/bubble1">

        <RelativeLayout
         android:layout_width="match_parent"
            android:background="#9959dc60"
        android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/sender_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/sender"
                    android:layout_gravity="start"
                    android:textColor="@android:color/primary_text_light" />

                <TextView
                    android:id="@+id/date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/date"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@android:color/primary_text_light" />
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:padding="2dp"
            android:layout_margin="2dp"
            android:background="@color/button_grey"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_welcome_to_kahawa_information_system_chat_app"
            android:textColor="@android:color/primary_text_light" />
    </LinearLayout>

</LinearLayout>