<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".UI.Activities.ActivitySell">
<android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendGoodsToserver"
            android:text="@string/upload_good"/>
    </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
    <ImageView
        android:layout_width="200dp"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:layout_height="200dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:hint="@string/name_of_product"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:hint="@string/product_cost"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="uploadImage"
            android:text="@string/upload_image"/>
    </LinearLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <android.support.design.widget.TextInputLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:maxLines="100"
                android:hint="@string/product_cost"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
